Work being done on the twitter API call

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
-    "meteor-node-stubs": "^0.3.2"
+    "cors": "^2.8.4",
+    "meteor-node-stubs": "^0.3.2",
+    "twit": "^2.2.9"
   }
 }
