--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.36",
     "cors": "^2.8.4",
+    "future": "^2.3.1",
     "meteor-node-stubs": "^0.3.2",
     "twit": "^2.2.9"
   }
